# UPLM_LLMs

./: README.md  pyproject.toml
finetuning_open_source_llms/: CONTENT.md
finetuning_open_source_llms/project_1/: config.json
finetuning_open_source_llms/project_1/model/: check_llm_model.py  load_llm_model.py
finetuning_open_source_llms/project_1/setup/: create_container_dataset.py  create_project_workspace.py
finetuning_open_source_llms/project_1/tasks/: create_preference_dataset.py  delete_preference_dataset.py  push_to_argilla.py
local_models/tinyllama_1.1b_chat/: dummy_file.md
