[tool.poetry]
package-mode = false
name = "uplm-llms"
version = "0.1.0"
description = "This package collects weekly projects from several Uplimit courses on LLMs."
authors = ["davidhornshaw <d.hornshaw@protonmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^2.1.2"
pandas = "^2.2.3"
argilla = "2.3.0"
huggingface-hub = "^0.26.0"
datasets = "^3.0.1"
distilabel = "^1.4.1"
transformers = "^4.45.2"
torch = "^2.5.0"
accelerate = "^1.0.1"
beautifulsoup4 = "^4.12.3"
flake8 = "^7.1.1"
mypy = "^1.12.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

